--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node ./bin/www",
-    "dev": "cross-env NODE_ENV=development node ./bin/www",
-    "clean": "rimraf public/styles/style.css public/scripts/bundle.js public/scripts/bundle.js.map",
-    "lessc": "cross-env lessc ./public/styles/style.less ./public/style.css",
-    "package": "cross-env NODE_ENV=production npm run lessc && webpack",
-    "test": "mocha test",
-    "test:dev": "mocha --watch test",
-    "test:nyan": "mocha --watch --reporter nyan test"
+    "start": "NODE_ENV=development node ./start",
+    "dev": "NODE_ENV=development node ./start",
+    "clean": "rimraf public/style.css public/bundle.js public/bundle.js.map",
+    "lessc": "lessc ./public/styles/style.less ./public/style.css",
+    "package": "NODE_ENV=production npm run lessc && webpack"
   },
   "description": "",
   "repository": {
@@ -19,7 +16,6 @@
   },
   "dependencies": {
     "bootstrap": "~4.0.0-beta.2",
-    "compression": "~1.6.2",
     "express": "~4.15.2",
     "moment": "^2.18.1",
     "underscore": "~1.8.3"
@@ -31,16 +27,10 @@
     "babel-preset-es2015": "~6.24.1",
     "babel-preset-react": "~6.24.1",
     "babel-register": "~6.24.1",
-    "chai": "~3.5.0",
-    "chai-as-promised": "~6.0.0",
-    "cross-env": "~4.0.0",
     "es6-promise": "~4.1.0",
-    "jsdom": "~10.1.0",
     "json-loader": "~0.5.4",
     "less": "~2.7.2",
     "less-middleware": "~2.2.0",
-    "mocha": "~3.2.0",
-    "moment": "~2.18.1",
     "piping": "~1.0.0-rc.4",
     "react": "~15.5.4",
     "react-dom": "~15.5.4",
@@ -48,8 +38,6 @@
     "react-router-dom": "~4.1.1",
     "rimraf": "~2.6.1",
     "scroll-to-element": "~2.0.0",
-    "sinon": "~2.1.0",
-    "sinon-chai": "~2.9.0",
     "webpack": "~2.4.1",
     "webpack-dev-middleware": "~1.10.1"
   },
