--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "babel-preset-react": "~6.24.1",
     "babel-register": "~6.24.1",
     "es6-promise": "~4.1.0",
+    "jquery": "~3.2.1",
     "json-loader": "~0.5.4",
     "less": "~2.7.2",
     "less-middleware": "~2.2.0",
+    "node-tesseract": "~0.2.7",
     "piping": "~1.0.0-rc.4",
     "react": "~15.5.4",
     "react-dom": "~15.5.4",
