--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "url": ""
   },
   "dependencies": {
-    "bootstrap": "~4.0.0-beta.2",
-    "express": "~4.15.2",
-    "moment": "^2.18.1",
-    "underscore": "~1.8.3"
+    "bootstrap": "~5.3.3",
+    "express": "~4.21.1",
+    "moment": "^2.30.1",
+    "underscore": "~1.13.7"
   },
   "devDependencies": {
     "babel-core": "~6.24.1",
