--- a/package.json
+++ b/package.json
@@ -3,48 +3,32 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development node ./start",
-    "dev": "NODE_ENV=development node ./start",
-    "clean": "rimraf public/style.css public/bundle.js public/bundle.js.map",
-    "lessc": "lessc scripts/styles/style.less ./public/style.css",
-    "package": "NODE_ENV=production npm run lessc && webpack"
+    "dev": "vite",
+    "package": "vite build"
   },
-  "description": "",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/scruffles/champions-rest"
   },
   "dependencies": {
     "bootstrap": "~5.3.3",
-    "express": "~4.21.1",
     "moment": "^2.30.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "~7.0.1",
     "underscore": "~1.13.7"
   },
   "devDependencies": {
-    "babel-core": "~6.24.1",
-    "babel-loader": "~6.4.1",
-    "babel-polyfill": "~6.23.0",
-    "babel-preset-es2015": "~6.24.1",
-    "babel-preset-react": "~6.24.1",
-    "babel-register": "~6.24.1",
-    "es6-promise": "~4.1.0",
-    "jquery": "~3.2.1",
-    "json-loader": "~0.5.4",
-    "less": "~2.7.2",
-    "less-middleware": "~2.2.0",
-    "node-tesseract": "~0.2.7",
-    "piping": "~1.0.0-rc.4",
-    "react": "~15.5.4",
-    "react-dom": "~15.5.4",
-    "react-router": "~4.1.1",
-    "react-router-dom": "~4.1.1",
-    "rimraf": "~2.6.1",
-    "scroll-to-element": "~2.0.0",
-    "webpack": "~2.4.1",
-    "webpack-dev-middleware": "~1.10.1"
-  },
-  "engines": {
-    "node": "~6.9.5",
-    "npm": "~4.5.0"
+    "@eslint/js": "^9.15.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "less": "~4.2.1",
+    "vite": "^6.0.1"
   }
 }
