--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '23'  # Use the version that matches your project's requirements
+          node-version: '23'
 
       - name: Install dependencies
         run: npm install
@@ -35,6 +35,6 @@ jobs:
 
       - name: Upload to S3
         run: |
-          aws s3 cp ./public s3://champions-rest.com/ --recursive
+          aws s3 cp ./dist s3://champions-rest.com/ --recursive
         env:
           S3_BUCKET: champions-rest.com
