--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "bootstrap": "~5.3.3",
+    "dedent-js": "~1.0.1",
+    "marked": "~15.0.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
