--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/scruffles/champions-rest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "~6.7.1",
     "bootstrap": "~5.3.3",
     "marked": "~15.0.3",
     "moment": "^2.30.1",
