--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:  # This allows the workflow to be manually triggered
-
+  workflow_dispatch: # This allows the workflow to be manually triggered
 
 jobs:
   build-and-deploy:
@@ -18,7 +17,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '23'
+          node-version: "23"
 
       - name: Install dependencies
         run: npm install
