--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "~7.0.1",
+    "tesseract.js": "~7.0.0",
     "underscore": "~1.13.7"
   },
   "devDependencies": {
