--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "~6.7.1",
     "bootstrap": "~5.3.3",
+    "fuse.js": "~7.1.0",
     "marked": "~15.0.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
